[package]
name = "cupido"
version = "0.1.0"
edition = "2021"
description = "Networking your files in seconds."
license-file = "./LICENSE"

[dependencies]
git2 = "0.18.1"
petgraph = "0.6.4"
tokio = { version = "1", features = ["full"] }
axum = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.195"
lazy_static = "1.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10.2"
clap = "4.4.18"

[[bin]]
edition = "2021"
name = "cupido"
path = "src/main.rs"
